--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GitHub API Futuriste</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header>
-    <h1>🌌 Projets GitHub – Jiraya Crew</h1>
-    <p>Exploration futuriste de mes repositories GitHub</p>
+    <h1>🚀 Repos GitHub Futuristes</h1>
+    <p>Exploration des projets publics de <strong>JiRaYaOG</strong></p>
 
     <div class="search-box">
-      <input type="text" id="search" placeholder="🔍 Rechercher un projet...">
+      <input id="searchInput" type="text" placeholder="🔎 Recherche un projet...">
     </div>
   </header>
 
   <main>
-    <section id="repo-list" class="repo-container">
+    <div id="repo-list" class="repo-container">
       <p class="loading">Chargement des données GitHub...</p>
-    </section>
+    </div>
   </main>
 
   <footer>
-    <p>🚀 Propulsé par GitHub API • Design néon futuriste • © 2025 Jiraya Crew</p>
+    <p>✨ Propulsé par l’API GitHub — Design Futuriste © 2025 JiRaYaOG</p>
   </footer>
 
   <script src="script.js"></script>
