--- a/index.html
+++ b/index.html
@@ -1,105 +1,113 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GitHub API Futuriste</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>🌌 GitHub API Futuriste</title>
 
   <!-- Lien vers ton fichier CSS -->
-  <link rel="stylesheet" href="styles.css">
-
-  <!-- Police futuriste -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet" />
 </head>
-<body>
 
-  <!-- Fond animé -->
+<body>
   <canvas id="bg-canvas"></canvas>
 
   <header>
     <h1 class="neon-title">🚀 GitHub API Futuriste</h1>
-    <h2 class="neon-subtitle">Explore les repos publics GitHub dans un style cyberpunk ⚡</h2>
+    <p class="neon-subtitle">Découvre mes repositories en direct depuis l’API GitHub</p>
   </header>
 
   <main>
-    <input type="text" id="search" placeholder="🔎 Recherche un dépôt...">
-    <div id="repo-list"></div>
+    <section class="search">
+      <input type="text" id="username" placeholder="Entre ton nom d'utilisateur GitHub..." />
+      <button id="fetchBtn">🔍 Rechercher</button>
+    </section>
+
+    <section id="repo-list" class="projects"></section>
   </main>
 
   <footer>
-    © 2025 JiRaYaOG — Powered by GitHub API ⚡
+    © 2025 Jiraya Crew – Design néon futuriste ✨
   </footer>
 
-  <!-- Script principal -->
   <script>
-    // Arrière-plan animé façon particules
+    // ===== Fond animé =====
     const canvas = document.getElementById('bg-canvas');
     const ctx = canvas.getContext('2d');
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
-    const particles = [];
-    for (let i = 0; i < 100; i++) {
-      particles.push({
-        x: Math.random() * canvas.width,
-        y: Math.random() * canvas.height,
-        radius: Math.random() * 2,
-        speedX: (Math.random() - 0.5) * 0.8,
-        speedY: (Math.random() - 0.5) * 0.8
-      });
+    const stars = Array.from({ length: 100 }, () => ({
+      x: Math.random() * canvas.width,
+      y: Math.random() * canvas.height,
+      r: Math.random() * 1.5,
+      d: Math.random() * 1
+    }));
+
+    function animateStars() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "rgba(255, 255, 255, 0.8)";
+      ctx.beginPath();
+      for (let s of stars) {
+        ctx.moveTo(s.x, s.y);
+        ctx.arc(s.x, s.y, s.r, 0, Math.PI * 2);
+      }
+      ctx.fill();
+      updateStars();
+      requestAnimationFrame(animateStars);
     }
 
-    function animate() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.2)";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "#0ff";
-
-      particles.forEach(p => {
-        p.x += p.speedX;
-        p.y += p.speedY;
-        if (p.x < 0 || p.x > canvas.width) p.speedX *= -1;
-        if (p.y < 0 || p.y > canvas.height) p.speedY *= -1;
-        ctx.beginPath();
-        ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-        ctx.fill();
-      });
-      requestAnimationFrame(animate);
+    function updateStars() {
+      for (let s of stars) {
+        s.y += s.d;
+        if (s.y > canvas.height) {
+          s.y = 0;
+          s.x = Math.random() * canvas.width;
+        }
+      }
     }
-    animate();
+    animateStars();
 
-    // --- SCRIPT PRINCIPAL : APPEL API GITHUB ---
+    // ===== Fonction principale =====
+    const fetchBtn = document.getElementById('fetchBtn');
+    const usernameInput = document.getElementById('username');
     const repoList = document.getElementById('repo-list');
-    const searchInput = document.getElementById('search');
 
-    async function getRepos() {
-      const response = await fetch('https://api.github.com/users/JiRaYaOG/repos');
-      const repos = await response.json();
-      displayRepos(repos);
-    }
+    fetchBtn.addEventListener('click', () => {
+      const username = usernameInput.value.trim();
+      if (!username) {
+        alert("⚠️ Merci d’entrer un nom d’utilisateur GitHub !");
+        return;
+      }
 
+      fetch(`https://api.github.com/users/${username}/repos`)
+        .then(res => res.json())
+        .then(data => displayRepos(data))
+        .catch(err => {
+          console.error(err);
+          repoList.innerHTML = "<p>❌ Erreur de chargement des dépôts.</p>";
+        });
+    });
+
+    // ===== Affichage des dépôts =====
     function displayRepos(repos) {
       repoList.innerHTML = '';
       repos.forEach(repo => {
         const card = document.createElement('div');
-        card.className = 'repo-card';
+        card.className = 'card';
         card.innerHTML = `
           <h3>${repo.name}</h3>
-          <p>${repo.description ? repo.description : 'Aucune description'}</p>
+          <p>${repo.description ? repo.description : 'Aucune description disponible.'}</p>
+          <div class="repo-stats">
+            <span class="stars">⭐ ${repo.stargazers_count}</span>
+            <span class="forks">🍴 ${repo.forks_count}</span>
+          </div>
           <a href="${repo.html_url}" target="_blank">🔗 Voir sur GitHub</a>
         `;
         repoList.appendChild(card);
       });
     }
-
-    // Filtrer les dépôts en temps réel
-    searchInput.addEventListener('input', async () => {
-      const response = await fetch('https://api.github.com/users/JiRaYaOG/repos');
-      const repos = await response.json();
-      const filtered = repos.filter(repo => repo.name.toLowerCase().includes(searchInput.value.toLowerCase()));
-      displayRepos(filtered);
-    });
-
-    getRepos();
   </script>
 </body>
 </html>
