--- a/index.html
+++ b/index.html
@@ -1,96 +1,50 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🌌 GitHub API Futuriste</title>
-
-  <!-- Lien vers ton fichier CSS -->
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GitHub API Futuriste</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <canvas id="bg-canvas"></canvas>
 
   <header>
-    <h1 class="neon-title">🚀 GitHub API Futuriste</h1>
-    <p class="neon-subtitle">Découvre mes repositories en direct depuis l’API GitHub</p>
+    <h1 class="neon-title">GitHub API Futuriste</h1>
+    <p class="neon-subtitle">Découvre les dépôts GitHub d’un utilisateur en style cyberpunk</p>
   </header>
 
-  <main>
-    <section class="search">
-      <input type="text" id="username" placeholder="Entre ton nom d'utilisateur GitHub..." />
-      <button id="fetchBtn">🔍 Rechercher</button>
-    </section>
+  <section class="search">
+    <input type="text" id="username" placeholder="Entre un nom d’utilisateur GitHub">
+    <button id="searchBtn">Rechercher</button>
+  </section>
 
-    <section id="repo-list" class="projects"></section>
+  <main>
+    <div id="repo-list" class="projects"></div>
   </main>
 
   <footer>
-    © 2025 Jiraya Crew – Design néon futuriste ✨
+    <p>🚀 Créé par JiRaYaOG — Inspiré par le futur 💫</p>
   </footer>
 
+  <!-- === Script principal === -->
   <script>
-    // ===== Fond animé =====
-    const canvas = document.getElementById('bg-canvas');
-    const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-
-    const stars = Array.from({ length: 100 }, () => ({
-      x: Math.random() * canvas.width,
-      y: Math.random() * canvas.height,
-      r: Math.random() * 1.5,
-      d: Math.random() * 1
-    }));
-
-    function animateStars() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "rgba(255, 255, 255, 0.8)";
-      ctx.beginPath();
-      for (let s of stars) {
-        ctx.moveTo(s.x, s.y);
-        ctx.arc(s.x, s.y, s.r, 0, Math.PI * 2);
-      }
-      ctx.fill();
-      updateStars();
-      requestAnimationFrame(animateStars);
-    }
-
-    function updateStars() {
-      for (let s of stars) {
-        s.y += s.d;
-        if (s.y > canvas.height) {
-          s.y = 0;
-          s.x = Math.random() * canvas.width;
-        }
-      }
-    }
-    animateStars();
-
-    // ===== Fonction principale =====
-    const fetchBtn = document.getElementById('fetchBtn');
+    const searchBtn = document.getElementById('searchBtn');
     const usernameInput = document.getElementById('username');
     const repoList = document.getElementById('repo-list');
 
-    fetchBtn.addEventListener('click', () => {
-      const username = usernameInput.value.trim();
-      if (!username) {
-        alert("⚠️ Merci d’entrer un nom d’utilisateur GitHub !");
-        return;
+    async function getRepos(username) {
+      try {
+        const response = await fetch(`https://api.github.com/users/${username}/repos`);
+        if (!response.ok) throw new Error('Utilisateur introuvable');
+        const repos = await response.json();
+        displayRepos(repos);
+      } catch (error) {
+        repoList.innerHTML = `<p style="color:#ff80ff;">⚠️ ${error.message}</p>`;
       }
+    }
 
-      fetch(`https://api.github.com/users/${username}/repos`)
-        .then(res => res.json())
-        .then(data => displayRepos(data))
-        .catch(err => {
-          console.error(err);
-          repoList.innerHTML = "<p>❌ Erreur de chargement des dépôts.</p>";
-        });
-    });
-
-    // ===== Affichage des dépôts =====
     function displayRepos(repos) {
       repoList.innerHTML = '';
       repos.forEach(repo => {
@@ -98,16 +52,72 @@
         card.className = 'card';
         card.innerHTML = `
           <h3>${repo.name}</h3>
-          <p>${repo.description ? repo.description : 'Aucune description disponible.'}</p>
+          <p>${repo.description ? repo.description : 'Aucune description disponible'}</p>
           <div class="repo-stats">
-            <span class="stars">⭐ ${repo.stargazers_count}</span>
-            <span class="forks">🍴 ${repo.forks_count}</span>
+            <span>⭐ ${repo.stargazers_count}</span>
+            <span>🍴 ${repo.forks_count}</span>
           </div>
           <a href="${repo.html_url}" target="_blank">🔗 Voir sur GitHub</a>
         `;
         repoList.appendChild(card);
       });
     }
+
+    searchBtn.addEventListener('click', () => {
+      const username = usernameInput.value.trim();
+      if (username) getRepos(username);
+    });
+
+    usernameInput.addEventListener('keypress', e => {
+      if (e.key === 'Enter') searchBtn.click();
+    });
+  </script>
+
+  <!-- === Fond animé (canvas cyberpunk) === -->
+  <script>
+    const canvas = document.getElementById('bg-canvas');
+    const ctx = canvas.getContext('2d');
+
+    let width, height, particles;
+
+    function init() {
+      width = canvas.width = window.innerWidth;
+      height = canvas.height = window.innerHeight;
+      particles = [];
+
+      for (let i = 0; i < 60; i++) {
+        particles.push({
+          x: Math.random() * width,
+          y: Math.random() * height,
+          radius: Math.random() * 2 + 0.5,
+          color: Math.random() > 0.5 ? '#00fff7' : '#ff00e6',
+          speedX: (Math.random() - 0.5) * 0.5,
+          speedY: (Math.random() - 0.5) * 0.5
+        });
+      }
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, width, height);
+      particles.forEach(p => {
+        p.x += p.speedX;
+        p.y += p.speedY;
+
+        if (p.x < 0 || p.x > width) p.speedX *= -1;
+        if (p.y < 0 || p.y > height) p.speedY *= -1;
+
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
+        ctx.fillStyle = p.color;
+        ctx.fill();
+      });
+
+      requestAnimationFrame(animate);
+    }
+
+    window.addEventListener('resize', init);
+    init();
+    animate();
   </script>
 </body>
 </html>
